# example-googletest-c

./: CMakeLists.txt  README.md
include/: add.h
src/: CMakeLists.txt  add.c  main.cpp
test/: CMakeLists.txt  hello_test.cpp
